tooling/nargo_cli/tests/snapshots/execution_success/a_1_mul/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(mut x: u32, y: u32, z: u32) {
    x = x * y;
    x = x * x;
    x = x * x;
    x = x * x;
    assert(x == z);
}
